<resources>
    <string name="app_name">Laundry</string>
    <string name="tvCARD_PELANGGAN_ID">ID Pelanggan</string>
    <string name="tvCARD_PELANGGAN_daftar">Terdaftar</string>
    <string name="tvCARD_PELANGGAN_Almt">Alamat</string>
    <string name="tvCARD_PELANGGAN_NoHP">No HP</string>
    <string name="btn_HUBUNGI">Hubungi</string>
    <string name="btn_LIHAT">Lihat</string>
    <string name="tvCARD_PELANGGAN_Nama">Nama Pelanggan</string>
    <string name="tvCARD_PEGAWAI_ID">ID Pegawai</string>
    <string name="tvCARD_PEGAWAI_Nama">Nama Pegawai</string>
    <string name="tvCARD_PEGAWAI_daftar">Terdaftar</string>
    <string name="tvCARD_PEGAWAI_Almt">Alamat</string>
    <string name="tvCARD_PEGAWAI_NoHP">NoHp</string>
    <string name="btn_HUBUNGI_pegawai">Hubungi</string>
    <string name="btn_LIHAT_pegawai">Lihat</string>
    <string name="tv1_TambahPelanggan">Tambah Pelanggan</string>
    <string name="tv2_NamaLengkap">Nama Lengkap</string>
    <string name="ET1_NamaLengkap">Nama Lengkap</string>
    <string name="tv3_Alamat">Alamat</string>
    <string name="ET2_Alamat">Alamat</string>
    <string name="tv4_NoHP">NoHP</string>
    <string name="ET3_NoHP">NoHP</string>
    <string name="tv5_NamaCabang">Nama Cabang</string>
    <string name="ET4_NamaCabang">Nama Cabang</string>
    <string name="btn_Simpan">Simpan</string>
    <string name="tv1_TambahPegawai">Tambah Pegawai</string>
    <string name="tv2_NamaLengkap_Pegawai">Nama Lengkap</string>
    <string name="validasi_alamat_pelanggan">Alamat Tidak Boleh Kosong</string>
    <string name="validasi_noHP_pelanggan">No HP Tidak Boleh Kosong</string>
    <string name="validasi_Cabang_pelanggan">Nama Cabang Tidak Boleh Kosong</string>
    <string name="sukses_simpan_pelanggan">Data Berhasil Disimpan</string>
    <string name="gagal_simpan_pelanggan">Data Gagal Disimpan</string>
    <string name="validasi_nama_pelanggan">Nama Tidak Boleh Kosong</string>
    <string name="validasi_nama_pegawai">Nama Tidak Boleh Kosong</string>
    <string name="validasi_alamat_pegawai">Alamat Tidak Boleh Kosong</string>
    <string name="validasi_noHP_pegawai">No HP Tidak Boleh Kosong</string>
    <string name="validasi_Cabang_pegawai">Nama Cabang Tidak Boleh Kosong</string>
    <string name="sukses_simpan_pegawai">Data Berhasil Disimpan</string>
    <string name="gagal_simpan_pegawai">Data Gagal Disimpan</string>
    <string name="namaPegawai">nama pegawai</string>
    <string name="tvCARD_PELANGGAN_cabang">Cabang</string>
    <string name="tvCARD_PEGAWAI_cabang">Cabang</string>
    <string name="Tv_ID_Layanan">ID Layanan</string>
    <string name="Tv_NamaLayanan">Nama Layanan</string>
    <string name="Tv_Harga">Harga</string>
    <string name="Tv_NamaCabang">Nama Cabang</string>
    <string name="validasi_Layanan_Nama">Nama Tidak Boleh Kosong</string>
    <string name="validasi_Layanan_Harga">Harga Tidak Boleh Kosong</string>
    <string name="validasi_Layanan_namacabang">Nama Cabang Tidak Boleh Kosong</string>
    <string name="sukses_simpan_layanan">Layanan Berhasil Disimpan</string>
    <string name="gagal_simpan_layanan">Layanan Gagal Disimpan</string>
    <string name="TvJudul1">Data Pelanggan</string>
    <string name="TvIsi1">Nama Pelanggan</string>
    <string name="TvIsi2">Nomor HP</string>
    <string name="btnPilihPelanggan">Pilih Pelanggan</string>
    <string name="TvJudul2">Layanan Utama</string>
    <string name="TvIsi3">Nama Layanan</string>
    <string name="btnPilihLayanan">Pilih Layanan</string>
    <string name="TvJudul3">Layanan Tambahan</string>
    <string name="btnTambahan">Tambahan</string>
    <string name="btnProses">Proses</string>
    <string name="estimasi">Estimasi Hari Ini</string>
    <string name="Transaksi">Transaksi</string>
    <string name="Pelanggan">Pelanggan</string>
    <string name="Laporan">Laporan</string>
    <string name="tvsiap">Siap melayani pelanggan dengan setulus hati</string>
    <string name="Tvjangan">Jangan kecewakan pelanggan</string>
    <string name="Akun">Akun</string>
    <string name="Layanan">Layanan</string>
    <string name="Pegawai">Pegawai</string>
    <string name="Cabang">Cabang</string>
    <string name="Printer">Printer</string>
    <string name="TvJudul">Konfirmasi Data</string>
    <string name="NamaPelanggan">Nama Pelanggan</string>
    <string name="TotalBayar">Total Bayar :</string>
    <string name="Batal">Batal</string>
    <string name="Pembayaran">Pembayaran</string>
    <string name="ClarestaLaundry">Claresta Laundry</string>
    <string name="IDTransaksi">ID Transaksi</string>
    <string name="Tanggal">Tanggal</string>
    <string name="Pesanan">Pesanan</string>
    <string name="Karyawan">Karyawan</string>
    <string name="RincianTambahan">Rincian Tambahan</string>
    <string name="subtotaltambahan">subtotal tambahan</string>
    <string name="Totalbayar">Total Bayar</string>
    <string name="KirimWhatsApp">Kirim WhatsApp</string>
    <string name="Cetak">Cetak</string>
    <string name="IDTambahan">ID Tambahan</string>
    <string name="NamaTambahan">Nama Tambahan</string>
    <string name="PilihMetodePembayaran">Pilih Metode Pembayaran</string>
    <string name="BayarNanti">Bayar Nanti</string>
    <string name="Tunai">Tunai</string>
    <string name="choose_customer">Silakan pilih pelanggan terlebih dahulu.</string>
    <string name="choose_service">Silakan pilih layanan terlebih dahulu.</string>
    <string name="LayananTerpilih">Layanan tambahan sudah dipilih</string>
    <string name="TambahLayanan">Tambah Layanan</string>
    <string name="MasukkanNamaLayanan">Masukkan Nama Layanan</string>
    <string name="MasukkanHarga">Masukkan Harga</string>
    <string name="MasukkanNamaCabang">Masukkan Nama Cabang</string>
</resources>