<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:background="#577BC1">

        <TextView
            android:id="@+id/tvCARD_PEGAWAI_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvCARD_PEGAWAI_ID"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="italic" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvCARD_PEGAWAI_Nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/tvCARD_PEGAWAI_Nama"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCARD_PEGAWAI_daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvCARD_PEGAWAI_daftar"
            android:textSize="18dp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/tvCARD_PEGAWAI_Almt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvCARD_PEGAWAI_Almt"
            android:textSize="17dp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/tvCARD_PEGAWAI_NoHP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvCARD_PEGAWAI_NoHP" android:textSize="17dp"
            android:textStyle="normal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_HUBUNGI_pegawai"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_HUBUNGI_pegawai"
                android:textSize="18dp"
                android:backgroundTint="#8BA455"/>

            <Button
                android:id="@+id/btn_LIHAT_pegawai"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/btn_LIHAT_pegawai"
                android:textSize="18dp"
                android:backgroundTint="#DCC56E"/>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>