<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvCARD_PELANGGAN"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:background="#577BC1">

        <TextView
            android:id="@+id/tvCARD_PELANGGAN_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvCARD_PELANGGAN_ID"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="italic" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvCARD_PELANGGAN_Nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/tvCARD_PELANGGAN_Nama"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCARD_PELANGGAN_daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvCARD_PELANGGAN_daftar"
            android:textStyle="normal"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvCARD_PELANGGAN_Almt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvCARD_PELANGGAN_Almt"
            android:textStyle="normal"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/tvCARD_PELANGGAN_NoHP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvCARD_PELANGGAN_NoHP"
            android:textStyle="normal"
            android:textSize="17dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_HUBUNGI"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_HUBUNGI"
                android:textSize="18dp"
                android:textStyle="normal"
                android:backgroundTint="#8BA455"/>

            <Button
                android:id="@+id/btn_LIHAT"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/btn_LIHAT"
                android:textSize="18dp"
                android:textStyle="normal"
                android:backgroundTint="#DCC56E"/>


        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>