<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/Cv_Layanan"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp">

    <!-- Wrapper layout untuk membungkus dua layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Bagian Header -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:background="#577BC1">

            <TextView
                android:id="@+id/TvCard_ID_Layanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:text="@string/Tv_ID_Layanan"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic" />
        </RelativeLayout>

        <!-- Bagian Isi -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/TvCard_NamaLayanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Tv_NamaLayanan"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TvCard_Harga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/Tv_Harga"
                android:textStyle="normal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TvCard_NamaCabang_Layanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/Tv_NamaCabang"
                android:textStyle="normal"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
